display:inline-block, hover, active

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <li class="main-nav__item">
                     <a href="customers/index.html">Customers</a>
                 </li>
-                <li class="main-nav__item">
-                    <a href="starrt-hosting/index.html">Start Hosting</a>
+                <li class="main-nav__item main-nav__item--cta">
+                    <a href="start-hosting/index.html">Start Hosting</a>
                 </li>
             </ul>
         </nav>
