multiple class names

--- a/practice/practice.html
+++ b/practice/practice.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="practice.css">
 </head>
 <body>
-    <main class="main-elemets">
-        <div class="main-div">I am a box</div>
-        <div class="main-div2">I am the second box</div>
-    </main>
+    <nav>
+        <a href="intro" class="active">Intro</a>
+        <a href="outro">Outro</a>
+    </nav>
+    <section id="intro" class="main-section highlighted">
+        <p>This is the outro class</p>
+    </section>
 </body>
+
 </html>
