using important and the differnce between using classes and ids

--- a/practice/practice.html
+++ b/practice/practice.html
@@ -10,11 +10,14 @@
 </head>
 <body>
     <nav>
-        <a href="intro" class="active">Intro</a>
-        <a href="outro">Outro</a>
+        <a href="#intro" class="active">Intro</a>
+        <a href="#outro">Outro</a>
     </nav>
     <section id="intro" class="main-section highlighted">
-        <p>This is the outro class</p>
+        <p>This is the intro section.</p>
+    </section>
+    <section id="outro" class="main-section">
+        <p>This is the outro section.</p>
     </section>
 </body>
 
