--- a/practice/practice.html
+++ b/practice/practice.html
@@ -18,6 +18,16 @@
     </section>
     <section id="outro" class="main-section">
         <p>This is the outro section.</p>
+
+        <h1 class="heading1">This is h1 heading</h1>
+        <div class="heading1-div">
+            <p class="heading1-div__par">Grab a cup of coffee</p>
+            <div><p class="heading1-div__par">Practice CSS for one hour</p></div>
+            
+        </div>
+        <div class="heading1-div2">
+            <p class="heading1-div2__par2">Go for a walk</p>
+        </div>
     </section>
 </body>
 
