--- a/packages/index.html
+++ b/packages/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div class="background"></div>
     <header class="main-header">
         <div>
             <a class="main-header__brand" href="../index.html">
