--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.5, user-scalable=yes, maximum-scale=2.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="main.css">
 </head>
@@ -29,7 +29,7 @@
                 <span class="toggle-button__bar"></span>
                 <span class="toggle-button__bar"></span>
             </button>
-            <a class="main-header__brand" href="index.html">
+            <a href="index.html" class="main-header__brand">
                 <img src="images/uhost-icon.png" alt="uHost - Your favorite hosting company">
             </a>
         </div>
@@ -65,7 +65,7 @@
             <h1>Get the freedom you deserve.</h1>
         </section>
         <section id="plans">
-            <h1 class="section-title">Choose your plan</h1>
+            <h1 class="section-title">Choose Your Plan</h1>
             <div class="plan__list">
                 <article class="plan">
                     <h1 class="plan__title">FREE</h1>
