fixed all the page links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="modal">
         <h1 class="modal__title">Do you want to continue?</h1>
         <div class="modal__actions">
-            <a href="start-hosting/index.html" class="modal__action">Yes!</a>
+            <a href="./start-hosting/index.html" class="modal__action">Yes!</a>
             <button class="modal__action modal__action--negative" type="button">No!</button>
         </div>
     </div>
@@ -36,7 +36,7 @@
         <nav class="main-nav">
             <ul class="main-nav__items">
                 <li class="main-nav__item">
-                    <a href="packages/index.html">Packages</a>
+                    <a href="./packages/index.html">Packages</a>
                 </li>
                 <li class="main-nav__item">
                     <a href="customers/index.html">Customers</a>
@@ -50,7 +50,7 @@
     <nav class="mobile-nav">
         <ul class="mobile-nav__items">
             <li class="mobile-nav__item">
-                <a href="packages/index.html">Packages</a>
+                <a href="./packages/index.html">Packages</a>
             </li>
             <li class="mobile-nav__item">
                 <a href="customers/index.html">Customers</a>
